[gd_scene load_steps=3 format=3 uid="uid://cai72ro26xs4m"]

[ext_resource type="Script" uid="uid://dx2wak0ij11r7" path="res://scripts/MissionSelectionUI.gd" id="1_plxia"]
[ext_resource type="StyleBox" uid="uid://bwupa2pkqwuwy" path="res://styles/PlanetLandingUI.tres" id="2_uxian"]

[node name="MissionSelectionUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_plxia")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.8)

[node name="MainContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -600.0
offset_top = -300.0
offset_right = 600.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="LeftPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_uxian")

[node name="MissionListContainer" type="VBoxContainer" parent="MainContainer/LeftPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 5

[node name="HeaderLabel" type="Label" parent="MainContainer/LeftPanel/MissionListContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 100, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Available Cargo Missions"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MainContainer/LeftPanel/MissionListContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MissionList" type="VBoxContainer" parent="MainContainer/LeftPanel/MissionListContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="RightPanel" type="Panel" parent="MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = ExtResource("2_uxian")

[node name="MissionDetailsContainer" type="VBoxContainer" parent="MainContainer/RightPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 15.0
offset_top = 15.0
offset_right = -15.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="DetailsHeaderLabel" type="Label" parent="MainContainer/RightPanel/MissionDetailsContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 100, 0, 1)
theme_override_font_sizes/font_size = 24
text = "Mission Deails"

[node name="MissionDetailsText" type="Label" parent="MainContainer/RightPanel/MissionDetailsContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0, 100, 0, 1)
theme_override_font_sizes/font_size = 16
text = "Select a mission to view details."
autowrap_mode = 3

[node name="ButtonContainer" type="VBoxContainer" parent="MainContainer/RightPanel/MissionDetailsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="AcceptMissionButton" type="Button" parent="MainContainer/RightPanel/MissionDetailsContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 100, 0, 1)
theme_override_font_sizes/font_size = 20
disabled = true
text = "Accept Mission"

[node name="BackButton" type="Button" parent="MainContainer/RightPanel/MissionDetailsContainer/ButtonContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 100, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Back to Planet"
